2009-08-05  John W. Eaton  <jwe@octave.org>

	* pt-eval.cc (tree_evaluator::visit_complex_for_command):
	Use key_list order for iterating through map.

	* Makefile.in (OCT_LINK_DEPS): Also include $(RLD_FLAG) in the list.

2009-08-05  John W. Eaton  <jwe@octave.org>

	* Makefile.in (octave$(EXEEXT)): Clean up link flags and library list.
	(OCTINTERP_LINK_DEPS): Omit -L../libcruft $(LIBCRUFT) $(LIBS)
	$(FLIBS) from the list.  Include $(RLD_FLAG) in the list.
	(OCT_LINK_DEPS): Only include -L. $(LIBOCTINTERP) in the list.

2009-08-05  Jaroslav Hajek  <highegg@gmail.com>

	* utils.cc (Fisindex): New DEFUN.

2009-08-04  Kristian Rumberg  <kristianrumberg@gmail.com>

	* input.cc (is_completing_dirfns): New function.
	(generate_completion): Use it to selectively complete file names.

2009-08-04  John W. Eaton  <jwe@octave.org>

	* debug.cc (Fdbwhere): Call octave_call_stack::goto_frame_relative
	to move to user code frame.  Get line and column information from
	call stack.
	* input.cc (Fkeyboard): Don't pass verbose flag to
	octave_call_stack::goto_frame_relative.
	(get_debug_input): Get line and column information from call stack.

	* pt-eval.h, pt-eval.cc (tree_evaluator::debug_line,
	tree_evaluator::debug_column, tree_evaluator::db_line,
	tree_evaluator::db_column): Delete.
	* pt-eval.cc (tree_evaluator::do_breakpoint): Don't print function
	name and location info here.  Delete line and column number args.
	Change all callers.

	* toplev.h (octave_call_stack::do_current,
	octave_call_stack::do_current_statement): New functions.
	(octave_call_stack::current): Call do_current, not top.
	(octave_call_stack::current_statement): Call do_current_statement,
	not top_statement.
	(octave_call_stack::top, octave_call_stack::top_statement,
	octave_call_stack::do_top, octave_call_stack::do_top_statement):
	Delete.

2009-08-04  John W. Eaton  <jwe@octave.org>

	* toplev.cc (octave_call_stack::do_goto_frame_relative): Allow
	NSKIP to be 0.  Set current scope and context.