@@ -1,6 +1,6 @@
 /*
 
-Copyright (C) 2008 Jaroslav Hajek
+Copyright (C) 2008, 2009 Jaroslav Hajek
 
 This file is part of Octave.
 
@@ -28,6 +28,9 @@ along with Octave; see the file COPYING.  If not, see
 #include "xdiv.h"
 #include LINCLUDE
 #include RINCLUDE
+#ifdef DEFINENULLASSIGNCONV
+#include "ov-null-mat.h"
+#endif
 
 // matrix by diag matrix ops.
 
@@ -44,6 +47,7 @@ DEFBINOP_OP (mul, LMATRIX, RMATRIX, *)
 #endif
 
 #define OCTAVE_LMATRIX CONCAT2(octave_, LMATRIX)
+#define OCTAVE_LDMATRIX CONCAT2(octave_, LDMATRIX)
 #define OCTAVE_RMATRIX CONCAT2(octave_, RMATRIX)
 #define LMATRIX_VALUE CONCAT2(LMATRIX, _value)
 #define RMATRIX_VALUE CONCAT2(RMATRIX, _value)
@@ -83,6 +87,7 @@ INST_NAME (void)
 #ifdef DEFINELDIV
   INSTALL_BINOP (op_ldiv, OCTAVE_LMATRIX, OCTAVE_RMATRIX, ldiv);
 #endif
+#ifdef DEFINENULLASSIGNCONV
+  INSTALL_ASSIGNCONV (OCTAVE_LMATRIX, octave_null_matrix, OCTAVE_LDMATRIX);
+#endif
 }
-
-
