@@ -1,3 +1,11 @@
+2009-08-06  John W. Eaton  <jwe@octave.org>
+
+	* OPERATORS/op-cdm-m.cc, OPERATORS/op-dm-m.cc, OPERATORS/op-pm-m.cc:
+	Define LDMATRIX and DEFINENULLASSIGNCONV.
+	* OPERATORS/op-dm-template.cc, OPERATORS/op-pm-template.cc:
+	Include ov-null-mat.h and define assignment conversion for null
+	matrices if DEFINENULLASSIGNCONV is defined.  Define OCTAVE_LDMATRIX.
+
 2009-08-05  John W. Eaton  <jwe@octave.org>
 
 	* pt-eval.cc (tree_evaluator::visit_complex_for_command):
